[workspace]
resolver = "2"

members = [
    "pool",
    "position-manager",
    "test-suite",
    "webauthn-factory",
    "webauthn-wallet",
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true # DEV: Do not remove this check - doing so will create vulnerabilities
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "21.4.0"

[workspace.dependencies.serde]
version = "1"
default-features = false

[workspace.dependencies.serde-json-core]
version = "0.5.1"
default-features = false

[workspace.dependencies.soroban-fixed-point-math]
version = "1.1.1"

[workspace.dependencies.stellar-xdr]
version = "21.2.0"
default-features = false

[workspace.dependencies.sha256]
version = "1.5.0"

[workspace.dependencies.sep-40-oracle]
git = "https://github.com/Robeartt/sep-40-oracle.git"

[workspace.dependencies.sep-41-token]
git = "https://github.com/Robeartt/sep-41-token.git"
