[package]
name = "test-suite"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-fixed-point-math = { workspace = true }
sep-40-oracle = { workspace = true, features = ["testutils"] }
sep-41-token = { workspace = true, features = ["testutils"] }